# clix

./: .env.example  .gitattributes  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  USAGE.md  nextest.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: cargo.yml  ci.yml  claude.yml  fmt.yml
docs/: approval_workflows.md  conditional_workflows.md  function_conversion.md
examples/: README.md  auth-workflow.json  conditional_workflow.json  gcloud-resources.json  gcloud-workflow.json  gke_workflow.json  loop_workflow.json  shared-commands.json  shell_functions.sh  time_workflow.json  workflow.json
examples/conditional_workflows/: gke.json  gkeconnect.json  killport.json
examples/shell_function_conversion/: gke_function.sh  kseal_workflow.json
src/: error.rs  lib.rs  main.rs
src/ai/: claude.rs  conversation.rs  mock.rs  mod.rs
src/cli/: app.rs  mod.rs
src/commands/: conditional_design.md  executor.rs  executor.rs.backup  expression.rs  function_converter.rs  mod.rs  models.rs  variables.rs  workflow_validator.rs
src/git/: mod.rs  repository.rs
src/security/: mod.rs  sanitizer.rs  validator.rs
src/settings/: mod.rs
src/share/: export.rs  import.rs  mod.rs
src/storage/: conversation_store.rs  git_storage.rs  mod.rs  storage.rs  store.rs
tests/: approval_workflow_tests.rs  claude_api_test.rs  claude_tests.rs  cli_help_snapshot_tests.rs  command_model_tests.rs  conditional_approval_integration_tests.rs  conditional_execution_tests.rs  conditional_workflow_integration_tests.rs  conditional_workflow_tests.rs  conversation_tests.rs  data_structure_snapshot_tests.rs  end_to_end_tests.rs  example_import_tests.rs  export_import_tests.rs  export_import_tests.rs.bak  function_converter_tests.rs  git_integration_tests.rs  git_storage_integration_tests.rs  performance_tests.rs  settings_tests.rs  storage_tests.rs  storage_tests.rs.bak  variable_tests.rs  workflow_model_tests.rs
tests/snapshots/: cli_help.txt  simple_command_export.json  workflow_export.json
