[package]
name = "clix"
version = "0.1.0"
edition = "2024"
description = "A command-line tool for storing and executing developer workflows"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
colored = "2.0"
thiserror = "1.0"