[package]
name = "clix"
version = "0.1.0"
edition = "2024"
description = "A command-line tool for storing and executing developer workflows"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
colored = "2.0"
thiserror = "1.0"
tracing = "0.1"
regex = "1.11"

[dev-dependencies]
temp-dir = "0.1"
temp-env = "0.3"
mockall = "0.11"
assert_fs = "1.0"
predicates = "3.0"
rstest = "0.18"
pretty_assertions = "1.4"
test-context = "0.1"
tokio = { version = "1.28", features = ["full"] }

[workspace.metadata.nextest]
test-threads = "logical-cores"
retries = { count = 1, backoff = "exponential" }
silence-build-metrics = true